Refactor CORS configuration for better readability